# BookMyShow

./: .env  PRD.md  ProdPlan.md  README.md  UIPRD.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  config.toml  smoke-test.ps1  smoke-test.sh
backend/crates/api/: Cargo.toml
backend/crates/api/migrations/: 001_initial_schema.sql
backend/crates/api/src/: auth.rs  dto.rs  handlers.rs  impl_from_response.rs  lib.rs  main.rs  rate_limiter.rs  routes.rs  state.rs  tests.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: config.rs  error.rs  lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: booking.rs  booking_status.rs  compensation_log.rs  lib.rs  lock_status.rs  movie.rs  payment.rs  payment_status.rs  queue_entry.rs  queue_status.rs  seat.rs  seat_lock.rs  seat_status.rs  seat_type.rs  show.rs  user.rs  venue.rs
backend/crates/repository/: Cargo.toml
backend/crates/repository-inmemory/: Cargo.toml
backend/crates/repository-inmemory/src/: in_memory_booking_repository.rs  in_memory_compensation_log_repository.rs  in_memory_movie_repository.rs  in_memory_payment_repository.rs  in_memory_queue_repository.rs  in_memory_seat_lock_repository.rs  in_memory_seat_repository.rs  in_memory_show_repository.rs  in_memory_user_repository.rs  in_memory_venue_repository.rs  lib.rs
backend/crates/repository-postgres/: Cargo.toml
backend/crates/repository-postgres/src/: lib.rs  pg_booking_repository.rs  pg_compensation_log_repository.rs  pg_movie_repository.rs  pg_payment_repository.rs  pg_queue_repository.rs  pg_seat_lock_repository.rs  pg_seat_repository.rs  pg_show_repository.rs  pg_user_repository.rs  pg_venue_repository.rs
backend/crates/repository/src/: booking_repository.rs  compensation_log_repository.rs  lib.rs  movie_repository.rs  payment_repository.rs  (+6 more)
backend/crates/service/: Cargo.toml
backend/crates/service/benches/: booking_flow.rs  seat_locking.rs
backend/crates/service/src/: booking.rs  booking_service.rs  email_service.rs  lib.rs  movie_service.rs  payment.rs  payment_service.rs  queue.rs  queue_service.rs  seat_locking.rs  seat_locking_service.rs  show.rs  show_service.rs  venue_service.rs
backend/src/: main.rs
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts
frontend/api/: admin.ts  auth.ts  bookings.ts  client.ts  movies.ts  payments.ts  queue.ts  shows.ts  venues.ts
frontend/app/: error.tsx  global-error.module.css  global-error.tsx  globals.css  layout.tsx  not-found.module.css  not-found.tsx  page.module.css  page.tsx
frontend/app/admin/: page.module.css  page.tsx
frontend/app/login/: page.module.css  page.tsx
frontend/app/movies/: page.module.css  page.tsx
frontend/app/my-bookings/: page.module.css  page.tsx
frontend/app/profile/: page.module.css  page.tsx
frontend/app/register/: page.module.css  page.tsx
frontend/app/search/: page.module.css  page.tsx
frontend/app/waiting-room/: page.module.css  page.tsx
frontend/components/booking/: BookingCard.module.css  BookingCard.tsx  LockTimer.module.css  LockTimer.tsx  QueueStatusBanner.module.css  QueueStatusBanner.tsx  SeatSelectionPanel.module.css  SeatSelectionPanel.tsx  StripePaymentForm.tsx  TicketDisplay.module.css  TicketDisplay.tsx
frontend/components/common/: Badge.module.css  Badge.tsx  EmptyState.module.css  EmptyState.tsx  LoadingSkeleton.module.css  LoadingSkeleton.tsx  Spinner.module.css  Spinner.tsx
frontend/components/forms/: Button.module.css  Button.tsx  Input.module.css  Input.tsx  Select.module.css  Select.tsx
frontend/components/layout/: AppShell.module.css  AppShell.tsx  Modal.module.css  Modal.tsx  PageHeader.module.css  PageHeader.tsx  Toast.module.css  Toast.tsx
frontend/components/seats/: ScreenIndicator.module.css  ScreenIndicator.tsx  Seat.module.css  Seat.tsx  SeatGrid.module.css  SeatGrid.tsx  SeatLegend.module.css  SeatLegend.tsx  SeatRow.module.css  SeatRow.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useApi.ts  useLockTimer.ts  useQueuePolling.ts  useRequireAuth.ts  useUserId.ts
frontend/types/: api.ts
frontend/utils/: error.ts  format.ts  moviePosters.ts  showExperience.ts  validation.ts
stitch_design_brief_master_prompt/admin_dashboard_cineplex/: code.html
stitch_design_brief_master_prompt/all_bookings_cineplex_admin/: code.html
stitch_design_brief_master_prompt/audit_logs_cineplex_admin/: code.html
stitch_design_brief_master_prompt/checkout_cineplex/: code.html
stitch_design_brief_master_prompt/cineplex_royal_cinema_system/: DESIGN.md
stitch_design_brief_master_prompt/create_account_cineplex/: code.html
stitch_design_brief_master_prompt/create_show_cineplex/: code.html
stitch_design_brief_master_prompt/e_ticket_confirmation_cineplex/: code.html
stitch_design_brief_master_prompt/error_cineplex/: code.html
stitch_design_brief_master_prompt/home_cineplex/: code.html
stitch_design_brief_master_prompt/live_show_monitor_cineplex_admin/: code.html
stitch_design_brief_master_prompt/login_portal_access_cineplex/: code.html
stitch_design_brief_master_prompt/movie_detail_cineplex/: code.html
stitch_design_brief_master_prompt/movies_cineplex/: code.html
stitch_design_brief_master_prompt/my_bookings_cineplex/: code.html
stitch_design_brief_master_prompt/search_results_cineplex/: code.html
stitch_design_brief_master_prompt/seat_selection_tiered_layout_cineplex/: code.html
stitch_design_brief_master_prompt/user_profile_cineplex/: code.html
stitch_design_brief_master_prompt/waiting_room_cineplex/: code.html
(+47 files in other folders)
