[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
service = { path = "../service" }
domain = { path = "../domain" }
common = { path = "../common" }
repository = { path = "../repository" }
repository_inmemory = { path = "../repository-inmemory" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
axum-test = "15"
