[package]
name = "repository_inmemory"
version = "0.1.0"
edition = "2024"

[dependencies]
repository = { path = "../repository" }
domain = { path = "../domain" }
common = { path = "../common" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
