[package]
name = "repository-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
domain    = { path = "../domain" }
common    = { path = "../common" }
repository = { path = "../repository" }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
