[package]
name = "service"
version = "0.1.0"
edition = "2024"

[features]
default = []
distributed-lock = ["dep:redis"]

[dependencies]
repository = { path = "../repository" }
domain = { path = "../domain" }
common = { path = "../common" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["form", "json"] }
serde_json = "1.0.149"
redis = { version = "0.27", features = ["aio", "tokio-comp"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "full"] }
futures = "0.3"
rand = "0.8"
repository_inmemory = { path = "../repository-inmemory" }
domain = { path = "../domain" }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "booking_flow"
harness = false

[[bench]]
name = "seat_locking"
harness = false
